# mp3_check

./: README
mp3_check/: GOALS  MILESTONE  MILESTONE.INTRO  MY_NOTES  Makefile  README  THANKYOU  TODO  WISHLIST  crctest.c  mp3_check.c  mp3_check.h  mp3_check.spec  mp3_check_misc.c  mp3_check_misc.c.orig  support_functions.h
mp3_check/mp3_check-1.95-rjk/: FOR_TESTING  MY_NOTES  Makefile.am  Makefile.in  NOTES  README  THANKYOU  config.h.in  configure  configure.in  id3.c  init.c  mp3_check.c  mp3_check.h  mp3_check_misc.c  print.c  support_functions.c
